Update project references in Duckov_DGLab.csproj to set Private property to False for TeamSoda and ItemStatsSystem DLLs

--- a/Duckov_DGLab/Duckov_DGLab.csproj
+++ b/Duckov_DGLab/Duckov_DGLab.csproj
@@ -16,14 +16,20 @@
 		<DuckovPath>E:\SteamLibrary\steamapps\common\Escape from Duckov</DuckovPath>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*"/>
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll"/>
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*"/>
-		<Reference Include="DGLabCSharp">
-			<HintPath>..\lib\DGLabCSharp.dll</HintPath>
-		</Reference>
-	</ItemGroup>
+    <ItemGroup>
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*">
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll">
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*">
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="DGLabCSharp">
+            <HintPath>..\lib\DGLabCSharp.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 
 	<ItemGroup>
 		<None Update="info.ini">
