Add configuration management and UI for DGLab settings
- Introduced DGLabConfig and ConfigManager for handling configuration loading and saving.
- Implemented DGLabConfigUI for user interface to adjust settings like HurtDuration, DeathDuration, and wave types.
- Removed obsolete ModConfig and ModConfigAPI files to streamline configuration handling.
- Updated GameEventHandler to utilize new configuration system for wave durations.

--- a/Duckov_DGLab/Duckov_DGLab.csproj
+++ b/Duckov_DGLab/Duckov_DGLab.csproj
@@ -16,20 +16,23 @@
 		<DuckovPath>E:\SteamLibrary\steamapps\common\Escape from Duckov</DuckovPath>
 	</PropertyGroup>
 
-    <ItemGroup>
-        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*">
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll">
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*">
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="DGLabCSharp">
-            <HintPath>..\lib\DGLabCSharp.dll</HintPath>
-        </Reference>
-    </ItemGroup>
+	<ItemGroup>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\Newtonsoft.Json.dll">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="DGLabCSharp">
+			<HintPath>..\lib\DGLabCSharp.dll</HintPath>
+		</Reference>
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="info.ini">
